fixes issue where CHA score is partly covered by sidebar

--- a/lesscss/components/statblock.less
+++ b/lesscss/components/statblock.less
@@ -116,8 +116,8 @@
   }
 
   .Abilities {
-    justify-content: space-around;
-    margin: @medium-spacer;
+    justify-content: space-between;
+    margin: @medium-spacer @large-spacer @medium-spacer 0;
 
     div {
       flex-direction: row;
